// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > renders help text correctly 1`] = `
<div>
  <div
    class="ds:w-full ds:sm:max-w-input-medium"
  >
    <label
      class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="_r_6_"
    >
      Username
    </label>
    <input
      aria-describedby="_r_7_"
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:py-3 ds:px-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input3"
      id="_r_6_"
      type="text"
      value="john"
    />
    <div
      class="ds:mt-2 ds:block ds:text-help ds:text-secondary-gray ds:font-arial"
      data-testid="input3-help"
      id="_r_7_"
    >
      Please enter your username
    </div>
  </div>
</div>
`;

exports[`InputField > renders input correctly 1`] = `
<div>
  <div
    class="ds:w-full ds:sm:max-w-input-medium"
  >
    <label
      class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="_r_3_"
    >
      Username
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:py-3 ds:px-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input2"
      id="_r_3_"
      placeholder="Enter your username"
      type="text"
      value="john"
    />
  </div>
</div>
`;

exports[`InputField > renders label correctly 1`] = `
<div>
  <div
    class="ds:w-full ds:sm:max-w-input-medium"
  >
    <label
      class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="_r_0_"
    >
      Username
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:py-3 ds:px-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input"
      id="_r_0_"
      type="text"
      value="john"
    />
  </div>
</div>
`;

exports[`InputField > updates input value correctly 1`] = `
<div>
  <div
    class="ds:w-full ds:sm:max-w-input-medium"
  >
    <label
      class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="_r_9_"
    >
      Username
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:py-3 ds:px-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input4"
      id="_r_9_"
      type="text"
      value="test value"
    />
  </div>
</div>
`;
